[gd_scene load_steps=7 format=3 uid="uid://ctdj3ynsraqpy"]

[ext_resource type="Script" path="res://scripts/movementAndRotation.gd" id="1_l4jme"]
[ext_resource type="Script" path="res://scenes/FileCollision.gd" id="2_up1xc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_w8rvq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b4xj5"]
size = Vector3(0.990247, 1, 1.03745)

[sub_resource type="PlaneMesh" id="PlaneMesh_3qn6t"]

[sub_resource type="BoxMesh" id="BoxMesh_sq4gk"]

[node name="Node3D" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0803652, -0.0397885, -0.00669718)
script = ExtResource("1_l4jme")

[node name="Camera" type="Camera3D" parent="CharacterBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("SphereShape3D_w8rvq")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.35494, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.466199, 0)
shape = SubResource("BoxShape3D_b4xj5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_3qn6t")

[node name="Folder" type="StaticBody3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.27585, 4.9104)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Folder"]
mesh = SubResource("BoxMesh_sq4gk")

[node name="Area3D" type="Area3D" parent="Folder"]
script = ExtResource("2_up1xc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Folder/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000989676, 0)
shape = SubResource("BoxShape3D_b4xj5")

[node name="Label3D" type="Label3D" parent="Folder/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.971506, 0)
pixel_size = 0.0121
text = "Folder Name"

[connection signal="input_event" from="Folder/Area3D" to="Folder/Area3D" method="_on_input_event"]
[connection signal="mouse_entered" from="Folder/Area3D" to="Folder/Area3D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Folder/Area3D" to="Folder/Area3D" method="_on_mouse_exited"]
